MCA App/Release/MCA App 1/src/objects/Payable_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payable Line Items</relationshipLabel>
        <relationshipName>Payable_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payable__c</fullName>
        <label>Payable</label>
        <referenceTo>Payable__c</referenceTo>
        <relationshipLabel>Payable Line Items</relationshipLabel>
        <relationshipName>Payable_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Payable Line Item</label>
    <nameField>
        <label>Payable Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payable Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>